--- a/GJ_TimeLine/GJ_TimeLine.csproj
+++ b/GJ_TimeLine/GJ_TimeLine.csproj
@@ -59,6 +59,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,6 +82,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeLineShow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TimeLineShow.Designer.cs">
+      <DependentUpon>TimeLineShow.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TimeLineThread.cs" />
     <Compile Include="TimeLine\TConfig.cs" />
     <Compile Include="TimeLine\TimeLine_Core.cs" />
     <EmbeddedResource Include="MainWindow.resx">
@@ -94,6 +103,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TimeLineShow.resx">
+      <DependentUpon>TimeLineShow.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -119,6 +131,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resource\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
