--- a/GJ_TimeLine/GJ_TimeLine.csproj
+++ b/GJ_TimeLine/GJ_TimeLine.csproj
@@ -54,6 +54,8 @@
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="Sprache, Version=2.2.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Sprache.2.2.0\lib\net45\Sprache.dll</HintPath>
     </Reference>
@@ -61,6 +63,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,6 +73,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\DoubleBufferListView.cs">
@@ -99,7 +103,6 @@
       <DependentUpon>TimeLineShow.cs</DependentUpon>
     </Compile>
     <Compile Include="TimeLineThread.cs" />
-    <Compile Include="TimeLine\TConfig.cs" />
     <Compile Include="TimeLine\TimeLine_Core.cs" />
     <EmbeddedResource Include="HotKeyEdit.resx">
       <DependentUpon>HotKeyEdit.cs</DependentUpon>
@@ -146,9 +149,18 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <None Include="Resource\background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GJ_TimeLineShow\GJ_TimeLineShow.csproj">
+      <Project>{af709262-4784-4d5b-bcbb-6eb73c496bac}</Project>
+      <Name>GJ_TimeLineShow</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GJ_TimeLine_Core\GJ_TimeLine_Core.csproj">
+      <Project>{fe681876-290e-440e-a98f-6c28f73886c8}</Project>
+      <Name>GJ_TimeLine_Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
